[package]
name = "csv_to_excel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.3.0", default-features = false }
rust_xlsxwriter = { version = "0.63.0", default-features = false }
